<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>gdbplasmaplugin</artifactId>
        <groupId>be.uclouvain.gdbplasmaplugin</groupId>
        <version>1.0.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>requirementchecker</artifactId>

    <packaging>jar</packaging>

    <dependencies>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.8</version>
        </dependency>

        <!-- not included in the jar -->
        <dependency>
            <groupId>jspf</groupId>
            <artifactId>core</artifactId>
            <version>1.0.2</version>
            <scope>system</scope>
            <systemPath>${plasma-jspf}</systemPath>
        </dependency>

        <!-- not included in the jar -->
        <dependency>
            <groupId>fr.inria.plasmalab</groupId>
            <artifactId>fr.inria.plasmalab.workflow</artifactId>
            <version>1.4.4-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${plasma-workflow}</systemPath>
        </dependency>

        <!-- not included in the jar -->
        <dependency>
            <groupId>fr.inria.plasmalab</groupId>
            <artifactId>fr.inria.plasmalab.bltl</artifactId>
            <version>1.4.4</version>
            <scope>system</scope>
            <systemPath>${plasma-plugins}/${plasma-bltl-name}</systemPath>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!-- to compile the code -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!-- to build the JAR file with dependencies (during package step)  -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <outputDirectory>${plasma-plugins}</outputDirectory>
                    <archive>
                        <manifestEntries>
                            <!-- link jar properly with bltl plugin -->
                            <!-- needs to be relative for Windows -->
                            <Class-Path>${plasma-bltl-name}</Class-Path>
                        </manifestEntries>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>


</project>